2012-07-04  George Petasis  <petasis@iit.demokritos.gr>

        * generic/tkpUtil.c: Fix in the tkStateKeyObjType definistion, in
	order to compile with Tk 8.6.
	* tclconfig/install-sh:
	* tclconfig/tcl.m4:
	* configure, configure.in: Updated to TEA 3.9.

2011-10-28  Peter Spjuth  <peter.spjuth@gmail.com>

        * win/makefile.vc
	* generic/path.c:
	* configure, configure.in: Bumped revision to 0.3.2

2011-10-28  Peter Spjuth  <peter.spjuth@gmail.com>

	* generic/tkCanvPath.c (PathCoords):
	Fixed memory leak when using coords command with path item.

2010-03-15  Peter Spjuth  <peter.spjuth@gmail.com>

        * generic/tkIntPath.h: Updated PATH_DEPIXELIZE to avoid an offset
	error with negative coordinates.
	* demos/arcs.tcl: Added an arc where the offset error was visible.

2010-03-15  Peter Spjuth  <peter.spjuth@gmail.com>

        * unix/tkUnixCairoPath.c (TkPathInit): Get correct size of Drawable.
	This fixes an intermittent strange clipping bug.

2010-03-10  George Petasis  <petasis@iit.demokritos.gr>

        * generic/tkpCanvPoly.c: fixes in DeletePolygon() to avoid double
        releases of polyPtr->coordPtr & polyPtr->fillGC by
        Tk_FreeConfigOptions().

        * generic/tkpCanvUtil.c: fixes in Tk_PathDeleteOutline(), to set the
        default empty values in the various Tk_PathOutline members, to stop
        double releases done by Tk_FreeConfigOptions() (i.e. by
        DeletePolygon() in tkpCanvPoly.c).

        * generic/tkpCanvas.c: fix in DestroyCanvas(), so as
        TkPathCanvasItemIteratorPrev() accepts a pointer that has not been
        just freed.

        * generic/tkpUtil.c: added a CONST before tkStateKeyObjType, to get
        the code to compile with Tk 8.6.

        * win/tkWinGDIPlusPath.cpp: changed the file from Mac OS X format to
        windows, as the MS C++ 10.0 compiler stopped with an error.

        * win/makefile.vc: I updated the windows makefile, to compile tkpath